Distinguish committed fallback snapshots